--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\mahee\\envs\\test\\Scripts\\python.exe"
+    "python.pythonPath": "F:\\Users\\mahee\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
